# KV-streams

./: .gitignore  PROGRESS.md  program.md  pyproject.toml  run_E_3node.sh
eval/: gpu_test_script.sh  gsm8k_attn_matching.py  gsm8k_both_conditions.py  gsm8k_condition_a.py  gsm8k_condition_e.py  gsm8k_eval.sh  gsm8k_generic.py  plan.md  progress.md  quick_gsm8k.py  quick_gsm8k_parallel.py  run_ab_sequential.sh  run_gpu_tests.sh
local_scripts/: check_deps.sh  check_node2.sh  download_data.sh  install_peft.sh  monitor.sh  orchestrate_phase2b.sh  run_A_2node.sh  run_A_3node.sh  run_B_3node.sh  run_E_3node.sh  run_K1_3node.sh  run_all_on_node.sh  run_all_tests.sh  run_condA_node.sh  run_condition_A_node2.sh  run_condition_B.sh  run_condition_C.sh  run_condition_D_node2.sh  run_cpu_tests.sh  run_ddp.sh  run_ddp_A.sh  run_ddp_C_W512.sh  run_ddp_W512.sh  run_ddp_W512_cond.sh  run_ddp_smoke.sh  run_gpu_tests.sh  run_mem_test.sh  run_on_node2.sh  run_scaleup_A.sh  run_scaleup_B.sh  run_scaleup_B_K4.sh  run_scaleup_B_P32.sh  run_scaleup_D.sh  run_scaleup_E.sh  run_smoke_test.sh  run_validate.sh  setup_and_run_node2.sh  setup_container.sh  setup_container_node.sh  setup_node2.sh  (+3 more)
report/: phase2_results.md  report.tex
scripts/: launch_phase2a.sh  launch_phase2b.sh  validate_setup.py
sft_experiments/: collect_and_report.py  generate_report.py  precompute_cache.py
src/: attention.py  blockwise.py  config.py  data.py  evaluate.py  kv_manager.py  model.py  train.py
tests/: conftest.py  test_attention.py  test_blockwise.py  test_config.py  test_data.py  test_evaluate.py  (+4 more)
(+11 files in other folders)
